--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,7 +19,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
-    "react-select": "^5.9.0"
+    "react-select": "^5.9.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
