--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@react-google-maps/api": "^2.20.5",
     "axios": "^1.7.9",
     "framer-motion": "^11.16.1",
     "gsap": "^3.12.5",
